fixed overflow mobile msg try 3

--- a/src/css/message-box.css
+++ b/src/css/message-box.css
@@ -105,5 +105,6 @@
   }
   .message-form {
     position: absolute;
+    bottom: 1px;
   }
 }
